issue with wrapping from select width

--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -387,6 +387,10 @@ span.summaryProgressBar {
   flex: 1;
 }
 
+#AddExpenseBarInner select {
+  max-width: 170px;
+}
+
 #AddExpenseBarInner input:focus,
 #AddExpenseBarInner select:focus,
 #AddExpenseBarInner .expenseInput:has(input:focus),
